--- a/_data/songs.yaml
+++ b/_data/songs.yaml
@@ -130,3 +130,93 @@
   artist: Doiri Farell
   youtube_link: https://youtu.be/3DIuH4BS8ds?si=WxsXZiVkGMUNeMXV
   soundcloud_link: ~
+- title: Crossing Muddy Waters
+  instrument: banjo
+  artist: John Hiatt / I'm With Her
+  youtube_link: https://www.youtube.com/watch?v=RXL396jJ30k&t=205s
+  soundcloud_link: ~
+- title: Pretenders
+  instrument: banjo
+  artist: Taylor Ashton
+  youtube_link: https://www.youtube.com/watch?v=RXL396jJ30k&t=911s
+  soundcloud_link: ~
+- title: If You Want to Sing Out, Sing Out
+  instrument: guitar
+  artist: Cat Stevens
+  youtube_link: ~
+  soundcloud_link: https://soundcloud.com/dhruv-rajan/if-you-want-to-sing-out-sing-out-by-cat-stevens?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
+- title: Tuesday's Dead
+  instrument: guitar
+  artist: Cat Stevens
+  youtube_link: https://youtu.be/tMmw27PHWzI
+  soundcloud_link: https://soundcloud.com/dhruv-rajan/tuesdaysdead?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
+- title: Blues Run the Game
+  instrument: guitar
+  artist: Jackson C. Frank
+  youtube_link: ~
+  soundcloud_link: https://soundcloud.com/dhruv-rajan/blues-run-the-game-jason-c?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
+- title: Nursie
+  instrument: guitar
+  artist: Jethro Tull
+  youtube_link: ~
+  soundcloud_link: https://soundcloud.com/dhruv-rajan/nursie-jethro-tull?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
+- title: Mother Goose
+  instrument: guitar
+  artist: Jethro Tull
+  youtube_link: ~
+  soundcloud_link: https://soundcloud.com/dhruv-rajan/mother-goose-jethro-tull?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
+- title: One White Duck / 0^10 = Nothing at All
+  instrument: guitar
+  artist: Jethro Tull
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Little Pot Stove
+  instrument: guitar
+  artist: Nic Jones
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Farewell to the Gold
+  instrument: guitar
+  artist: Nic Jones
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Shankill Butchers
+  instrument: guitar
+  artist: Decemberists
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Annan Waters
+  instrument: guitar
+  artist: Decemberists
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Hometown
+  instrument: guitar
+  artist: Sarah Jarosz
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Love Is All
+  instrument: guitar
+  artist: Tallest Man on Earth
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Life's a Long Song
+  instrument: guitar
+  artist: Jethro Tull
+  youtube_link: ~
+  soundcloud_link: https://soundcloud.com/dhruv-rajan/lifes-a-long-song-jethro-1?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
+- title: Blacksmith
+  instrument: mandolin
+  artist: Paul Brady / Andy Irvine
+  youtube_link: https://youtu.be/zZNjqG9OB3M
+  soundcloud_link: ~
+- title: Lakes of Ponchartrain
+  instrument: mandolin
+  artist: Paul Brady / Andy Irvine
+  youtube_link: https://youtu.be/9jeKgnaACLk
+  soundcloud_link: ~
+- title: Clyde Water (Guitar)
+  instrument: guitar
+  artist: Nic Jones
+  youtube_link: https://youtu.be/hFHqbJ4IeAE?si=_U3Hk6bAmFIp6-gA
+  soundcloud_link: ~
