--- a/_data/setlists.yaml
+++ b/_data/setlists.yaml
@@ -48,6 +48,12 @@
     - title: Mother Goose
     - title: Wond'ring Aloud
     - title: One White Duck / 0^10 = Nothing At All
+    - title: Little Pot Stove
+    - title: Farewell to the Gold
+    - title: Geordie
+    - title: Shankill Butchers
+    - title: Life's a Long Song
+    - title: Hometown
 
 - setlist_name: Setlist 4 (British Acoustic)
   instruments:
