--- a/_data/songs.yaml
+++ b/_data/songs.yaml
@@ -220,3 +220,8 @@
   artist: Nic Jones
   youtube_link: https://youtu.be/hFHqbJ4IeAE?si=_U3Hk6bAmFIp6-gA
   soundcloud_link: ~
+- title: Geordie
+  instrument: guitar
+  artist: Anais Mitchell & Jefferson Hamer
+  youtube_link: ~
+  soundcloud_link: https://soundcloud.com/dhruv-rajan/geordie-anais-mitchell-jefferson-hamer?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
