--- a/_data/songs.yaml
+++ b/_data/songs.yaml
@@ -225,3 +225,23 @@
   artist: Anais Mitchell & Jefferson Hamer
   youtube_link: ~
   soundcloud_link: https://soundcloud.com/dhruv-rajan/geordie-anais-mitchell-jefferson-hamer?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
+- title: Downeaster Alexa
+  instrument: guitar
+  artist: Billy Joel
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Mockingbird
+  instrument: guitar
+  artist: Ruston Kelly
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Southern Man
+  instrument: guitar
+  artist: CSNY
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Loretta
+  instrument: guitar
+  artist: Townes Van Zandt
+  youtube_link: ~
+  soundcloud_link: ~
