--- a/_data/songs.yaml
+++ b/_data/songs.yaml
@@ -245,3 +245,23 @@
   artist: Townes Van Zandt
   youtube_link: ~
   soundcloud_link: ~
+- title: Pat Rainey
+  instrument: octave mandolin
+  artist: Doiri Farell
+  youtube_link: ~
+  soundcloud_link: ~
+- title: The Little Drummer
+  instrument: octave mandolin
+  artist: Doiri Farell
+  youtube_link: ~
+  soundcloud_link: ~
+- title: The Ludlow Massacre
+  instrument: octave mandolin
+  artist: Doiri Farell
+  youtube_link: ~
+  soundcloud_link: ~
+- title: Church Street Blues
+  instrument: guitar
+  artist: Tony Rice
+  youtube_link: ~
+  soundcloud_link: ~
