--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -1,4 +1,4 @@
-- event_name: Farm VolunteerPotluck
+- event_name: Deer Hollow Volunteer Potluck
   date: November 14th, 2024
   location: Mountain View Center for Performing Arts
 - event_name: Kings Mountain Winery Annual Member Event
